--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ scrapy
 bs4
 openai
 pandas
+pyarrow
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
@@ -11,3 +12,7 @@ webdriver_manager
 mysql-connector-python
 gspread
 oauth2client
+prefect==2.11.4
+prefect-gcp==0.4.4
+prefect-gcp[cloud_storage]==0.4.4
+prefect-gcp[secret_manager]==0.4.4
