--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -20,44 +20,42 @@ jobs:
       GCS_HOST: ${{ secrets.GCS_HOST }}
       GCP_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }} # Asegúrate de haber agregado esto a tus secrets en GitHub
       INSTANCE_CONNECTION_NAME: ${{ secrets.INSTANCE_CONNECTION_NAME }} # Añade esto también a tus secrets
+      
+    permissions:
+      contents: 'read'
+      id-token: 'write'
 
     steps:
     - uses: actions/checkout@v2
     
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v2'
       with:
-        python-version: '3.8'  # Asegúrate de usar la versión de Python que necesites
+        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
-    - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0
+        
+    - name: 'Set up Cloud SDK'
+      uses: 'google-github-actions/setup-gcloud@v2'
       with:
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_CREDENTIALS }}
-        export_default_credentials: true
-
-    - name: Install and start Cloud SQL Proxy
+        version: '>= 363.0.0'
+    
+    - name: 'Install and start Cloud SQL Proxy'
       run: |
         wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
         chmod +x cloud_sql_proxy
         ./cloud_sql_proxy --address 0.0.0.0 --port 3306 ${{ secrets.INSTANCE_CONNECTION_NAME }} &
         sleep 10 # Espera a que el proxy inicie completamente
 
-    - name: Install Chrome WebDriver
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y chromium-driver
-        echo "CHROMEWEBDRIVER=/usr/bin/chromium-driver" >> $GITHUB_ENV
-
-    - name: Install dependencies
+    - name: 'Set up Python'
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+        
+    - name: 'Install dependencies'
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install selenium webdriver_manager
 
-    - name: Get Public IP
-      run: curl ifconfig.me
-
-    - name: Run script
+    - name: 'Run script'
       run: python main.py --correr-todo
-
