--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  # Descomenta la siguiente sección si deseas ejecutar este workflow en un horario programado
+  # Descomenta la siguiente sección si deseas ejecutar este workflow en un horario programado,
   # schedule:
   #   # Ejecuta todos los días a las 12:00 UTC
   #   - cron: '0 12 * * *'
