test scraper zona job en actions

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,17 @@ bs4
 openai
 pandas
 pyarrow
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
-google-api-python-client
-google-cloud-logging
 selenium
 webdriver_manager
 mysql-connector-python
 gspread
-oauth2client
 prefect==2.14.17
 prefect-gcp==0.4.4
 anyio==3.7.1
 seaborn
 unidecode
+beautifulsoup4==4.11.1
+cloudscraper==1.2.64
+numpy==1.23.3
+pandas==1.5.0
+lxml==4.9.1
