--- a/.github/workflows/test_cloudscraper.yml
+++ b/.github/workflows/test_cloudscraper.yml
@@ -7,16 +7,19 @@ on:
 jobs:
   run-scraper:
     runs-on: ubuntu-latest
+    steps: # You need to add this 'steps' key to indicate the sequence of steps
+      - name: 'Check out code'
+        uses: actions/checkout@v2 # This step checks out your repository under $GITHUB_WORKSPACE, so your workflow can access it
 
-    - name: 'Set up Python'
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
+      - name: 'Set up Python'
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
         
-    - name: 'Install dependencies'
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: 'Install dependencies'
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: 'Run script'
-      run: python run_scraper.py
+      - name: 'Run script'
+        run: python run_scraper.py
