de nuevo test cloudscraper en actions

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,10 @@ selenium
 webdriver_manager
 mysql-connector-python
 gspread
-prefect==2.14.17
-prefect-gcp==0.4.4
-anyio==3.7.1
+anyio
 seaborn
 unidecode
-beautifulsoup4==4.11.1
-cloudscraper==1.2.64
-numpy==1.23.3
-pandas==1.5.0
-lxml==4.9.1
+beautifulsoup4
+cloudscraper
+numpy
+lxml
