--- a/.github/workflows/test_cloudscraper.yml
+++ b/.github/workflows/test_cloudscraper.yml
@@ -20,6 +20,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install selenium webdriver_manager
+
 
       - name: 'Run script'
         run: python run_scraper.py
