git flow en proceso

--- a/.github/workflows/daily_run.yml
+++ b/.github/workflows/daily_run.yml
@@ -1,9 +1,9 @@
 name: Daily Supermarket Scraper Run
 
 on:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
   #Descomenta la siguiente sección si deseas ejecutar este workflow en un horario programado,
 #  schedule:
 #     Ejecuta todos los días a las 12:00 UTC
